// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test default state 1`] = `
<div
  className="Pinpoint SubscriptionUnsubscribe Wrapper "
>
  <div
    className="Pinpoint SubscriptionUnsubscribe Container"
  >
    <div
      className="Pinpoint SubscriptionUnsubscribe Content"
    >
      
      
      
      <p
        className="Pinpoint SubscriptionUnsubscribe Warning"
      >
        You are about to 
        unsubscribe
         
        <strong>
          keegan@pinpoint.com
        </strong>
         
        from
         updates from 
        Pinpoint
        .
      </p>
      <div
        className="pt-6"
      >
        <button
          className="Pinpoint SubscriptionUnsubscribe Button Unsubscribe"
          disabled={false}
          onClick={[Function]}
        >
          Unsubscribe
        </button>
      </div>
      <span
        className="Pinpoint SubscriptionUnsubscribe Manage"
      >
        manage all subscriptions
      </span>
    </div>
  </div>
</div>
`;

exports[`Test not subscribed pending state 1`] = `
<div
  className="Pinpoint SubscriptionUnsubscribe Wrapper "
>
  <div
    className="Pinpoint SubscriptionUnsubscribe Container"
  >
    <div
      className="Pinpoint SubscriptionUnsubscribe Content"
    >
      
      
      
      <p
        className="Pinpoint SubscriptionUnsubscribe Warning"
      >
        You are about to 
        subscribe
         
        <strong>
          keegan@pinpoint.com
        </strong>
         
        to
         updates from 
        Pinpoint
        .
      </p>
      <div
        className="pt-6"
      >
        <button
          className="Pinpoint SubscriptionUnsubscribe Button Resubscribe"
          disabled={true}
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-spinner fa-w-16 fa-pulse "
            data-icon="spinner"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <span
        className="Pinpoint SubscriptionUnsubscribe Manage"
      >
        manage all subscriptions
      </span>
    </div>
  </div>
</div>
`;

exports[`Test not subscribed state 1`] = `
<div
  className="Pinpoint SubscriptionUnsubscribe Wrapper "
>
  <div
    className="Pinpoint SubscriptionUnsubscribe Container"
  >
    <div
      className="Pinpoint SubscriptionUnsubscribe Content"
    >
      
      
      
      <p
        className="Pinpoint SubscriptionUnsubscribe Warning"
      >
        You are about to 
        subscribe
         
        <strong>
          keegan@pinpoint.com
        </strong>
         
        to
         updates from 
        Pinpoint
        .
      </p>
      <div
        className="pt-6"
      >
        <button
          className="Pinpoint SubscriptionUnsubscribe Button Resubscribe"
          disabled={false}
          onClick={[Function]}
        >
          Resubscribe
        </button>
      </div>
      <span
        className="Pinpoint SubscriptionUnsubscribe Manage"
      >
        manage all subscriptions
      </span>
    </div>
  </div>
</div>
`;

exports[`Test pending state 1`] = `
<div
  className="Pinpoint SubscriptionUnsubscribe Wrapper "
>
  <div
    className="Pinpoint SubscriptionUnsubscribe Container"
  >
    <div
      className="Pinpoint SubscriptionUnsubscribe Content"
    >
      
      
      
      <p
        className="Pinpoint SubscriptionUnsubscribe Warning"
      >
        You are about to 
        unsubscribe
         
        <strong>
          keegan@pinpoint.com
        </strong>
         
        from
         updates from 
        Pinpoint
        .
      </p>
      <div
        className="pt-6"
      >
        <button
          className="Pinpoint SubscriptionUnsubscribe Button Unsubscribe"
          disabled={true}
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-spinner fa-w-16 fa-pulse "
            data-icon="spinner"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <span
        className="Pinpoint SubscriptionUnsubscribe Manage"
      >
        manage all subscriptions
      </span>
    </div>
  </div>
</div>
`;
